fix: gap fix

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -26,10 +26,6 @@ body {
   background-color: $black-bg;
 }
 
-.flick-custom .flicking-camera {
-  gap: 20px;
-}
-
 .react-player {
   position: absolute;
   z-index: 100;
