--- a/src/pages/Home/startScreen/textSide/featuresMobile/styles.module.scss
+++ b/src/pages/Home/startScreen/textSide/featuresMobile/styles.module.scss
@@ -2,3 +2,7 @@
   margin-top: 48px;
 }
 
+.sliderWrapper {
+  margin-right: 40px;
+}
+
